--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 				<td>
 					<h3>Find out if its hot or cold: </h3>
 					<form action="javascript:displayNumber()">						
-						<label for="guess">guess:</label>
-						<input type="number" step="1" id="guess" placeholder="Enter number (1-6)"><br><br>
+						<label for="guess">Temprature:</label>
+						<input type="text" id="guess" placeholder="Enter the temprature"><br><br>
 						<input type="submit" value="Display Number">
 					</form>
 				</td>
 				<td>
-					<img src="./images/guess.png" alt="Guess" width="100%">
+					<img src="./images/hc.webp" alt="Hot and Cold" width="100%">
 				</td>
 			</tr>
 		</table>
